--- a/css/style.css
+++ b/css/style.css
@@ -122,19 +122,16 @@ body {
 }
 
 .LearningJourneyContent {
-  position: absolute;
-  top: 650px;
-  left: 750px;
-  width: 90%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
+  bottom: 200vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100vw;}
 
 .LearningText {
-  position: absolute;
-  top: -140px;
-  left: 30%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  top: -30vh;
+  width: 90%;
   color: white;
   padding: 1rem;
   font-weight: 800;
@@ -162,13 +159,40 @@ body {
   padding-top: 14px;
 }
 
-.step1 { top: 110px; left: 90px; }
-.step2 { top: 340px; left: 90px; width: 140px;}
-.step3 { top: 750px; left: 160px; width: 100px;}
-.step4 { top: 430px; left: 445px; width: 100px;}
-.step5 { top: 40px; left: 590px; width: 100px;}
-.step6 { top: 350px; left: 790px; width: 100px;}
-.step7 { top: 730px; left: 960px; }
+.step1 {
+  top: 18vh;
+  left: 11vw;
+}
+
+.step2 {
+  top: 50vh;
+  left: 11vw;
+  width: 13vw;
+}
+.step3 {
+  top: 112vh;
+  left: 17vw;
+  width: 10vw;
+}
+.step4 {
+  top: 66vh;
+  left: 35vw;
+  width: 12vw;
+}
+
+.step5 {
+  top: 5vh;
+  left: 45vw;
+  width: 12vw;
+}
+.step6 {
+  top: 53vh;
+  left: 59vw;
+  width: 8vw;
+}
+.step7 {
+  top: 107vh;
+  left: 73vw;}
 
 
 
@@ -205,7 +229,7 @@ body {
   margin: 0 auto;
   height: 80vh;
   min-height: 600px;
-  padding: 10px;
+  padding: 50px;
   box-sizing: border-box;
 }
 .grid-item {
@@ -333,7 +357,7 @@ body {
   z-index: 1;
   display: flex;
   justify-content: center;
-  gap: 30px;
+  gap: 0px;
   flex-wrap: wrap;
   max-width: 1200px;
   width: 100%;
