--- a/css/style.css
+++ b/css/style.css
@@ -566,7 +566,6 @@ body {
 .story-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 .date-badge {
@@ -592,7 +591,7 @@ body {
 
 .read-more-btn {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 2px 10px;
   background: #ffc107;
   color: #000;
   text-decoration: none;
@@ -601,7 +600,6 @@ body {
   font-size: 14px;
   transition: background 0.3s ease;
   align-self: flex-start;
-  margin-left: 25px;
 }
 
 .read-more-btn:hover {
@@ -735,7 +733,7 @@ body {
 
 @media (max-width: 768px) {
   .presence-details {
-    grid-template-columns: 1fr;
+    padding: 20px;
     gap: 20px;
   }
 
@@ -935,13 +933,13 @@ body {
   }
 
   .counter-block h3 {
-    font-size: 7px;
+    font-size: 10px;
     font-weight: 600;
     line-height: 1.2;
   }
 
   .counter-block p {
-    font-size: 9px;
+    font-size: 15px;
     font-weight: 800;
     margin-top: 2px;
   }
@@ -1304,22 +1302,90 @@ body {
   display: none;
 }
 
+.k-12-desc  {
+  margin-top: 30px;
+}
+
+.k-12-image-2{
+  display: none;
+}
+
+@media screen and (max-width: 512px) {
+
+
+  .counter-block h3 {
+    font-size: 5px;
+    width: 10vw;
+  }
+  .labs{
+    left: 52%;
+  }
+  .counter-block p {
+    font-size: 8px;
+  }
+
+  .content-card {
+    width: 80vw;
+    gap: 0px !important;
+    right: 0;
+    top: -40vh !important;
+    padding: 30px 10px;
+  }
+  .controls{
+    padding-left: 2px !important;
+  }
+      .large-circle-shape-1 {
+        height: 41vh !important;
+        top: 60vh !important;
+    }
+    .learn-more-btn{
+          padding: 2px 20px;
+    }
+    .main-image{
+      height: 60vh !important;
+    }
+
+    .card-description{
+      font-size: 10px !important;
+    }
+    .card-title{
+      font-size: 20px !important;
+    }
+
+    .right-circle-2{
+      height: 20vh !important;
+      top:60vh  !important;
+    }
+}
 /* Mobile responsiveness */
 @media (max-width: 768px) {
    html, body{
     margin: 0;
     overflow-x: hidden;
-    overflow-x: hidden;
     max-width: 100%;  
+    max-height: 100%;
   }
 
+  .inspire-section{
+    padding: 60px 50px;
+  }
+  .inspire-heading{
+    width: 70% !important;
+    font-size: 36px !important;
+    margin: auto;
+  }
+  .inspire-paragraph{
+    width: 75% !important;
+    font-size: 16px !important;
+    margin: auto;
+  }
   .right-circle-2 {
     display: block;
     position: absolute;
     right: 0 !important;
   }
   .large-circle-shape-1{
-    height: 60vh !important ;
+    height: 60vh  ;
   }
   .content-card {
     width: 60vw;
@@ -1372,7 +1438,7 @@ body {
   }
 
   .card-description {
-    font-size: 0.8rem !important ;
+    font-size: 0.8rem  ;
     margin-bottom: 0  ;
   }
 
@@ -1409,6 +1475,139 @@ body {
   .empowering-desc{
     width: 70vw !important;
   }
+
+  .k-12{
+    width: 100% !important;
+    padding: 20px 40px;
+    flex-direction: row !important;
+  }
+  .k-12-main{
+    padding-left:0px;
+    width: 50%;
+  }
+  .k-12-header{
+    flex-direction: column !important;
+  }
+
+  .k-12-image-1{
+    display: none !important;
+  }
+   .k-12-image-2{
+    display: block !important;
+    position: relative;
+    height: 35vh;
+    width: auto;
+  }
+
+  .k-12-man-image{
+    width: 50% !important;
+  }
+
+  .k-12-man-image img{
+    height: 45vh !important;
+    max-width: fit-content !important;
+    width: auto !important;
+  }
+
+  .k-12-desc{
+    width: 110% !important;
+    position: relative;
+    padding: 0px !important;
+    margin-top: 30px !important;
+  }
+
+  .activeity-cards{
+    padding-left: 0px !important;
+    width: 100% !important;
+    margin: auto !important;
+  }
+
+  .k-12-cards-grid{
+    display: grid;
+    grid-template-columns: repeat(2, 0fr) !important;
+    gap: 20px;
+    margin: auto;
+    width: auto !important;
+  }
+  .p-3{
+    width: 43vw;
+  }
+
+  .power-header{
+    padding-left: 0px !important;
+    text-align: center !important;
+    margin-bottom: 30px !important;
+  }
+  .power-header h1{
+    width: 80% !important;
+    margin: auto !important;
+  }
+  .power-header p{
+    width: 80% !important;
+    margin: auto !important;
+  }
+  
+  .power-education{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+  .power-education img{
+    width: 30vw !important;
+    height: 28vh !important;
+    border-radius: 12px !important;
+  }
+  .power-education span{
+    width: 80% !important;
+  }
+
+  .text-center{
+    border-bottom: 1px solid white !important;
+  }
+
+  .grid-container{
+    padding: 0%;
+  }
+
+
+  .client-section{
+    padding: 60px 50px;
+  }
+  .client-heading{
+    width: 70% !important;
+    font-size: 36px !important;
+    margin: auto;
+  }
+  .client-paragraph{
+    width: 75% !important;
+    font-size: 16px !important;
+    margin: auto;
+  }
+
+  .stories-grid{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .story-card{
+    width: 50%;
+  }
+  .story-content{
+    padding: 20px 0px;
+  }
+
+  .story-title{
+    margin: 20px 0px;
+
+  }
+
+  .story-description{
+    display: none;
+  }
 }
+
+
 
 
