New Things Updated

--- a/css/style.css
+++ b/css/style.css
@@ -1335,8 +1335,26 @@ body {
     padding-left: 2px !important;
   }
       .large-circle-shape-1 {
+        position: relative;
         height: 41vh !important;
-        top: 60vh !important;
+        top: -3vh !important;
+    }
+
+    .right-circle{
+      position: relative;
+    }
+
+    .right-circle-2 {
+      position: relative !important;
+      top: -60vh !important;
+      left: 80vw;
+      height: 18vh !important;
+    }
+    .circle-shape-2 {
+          height: 8vh !important;
+    left: 5vw !important  ;
+    top: -40vh !important;
+    z-index: 12;
     }
     .learn-more-btn{
           padding: 2px 20px;
@@ -1352,31 +1370,70 @@ body {
       font-size: 20px !important;
     }
 
-    .right-circle-2{
-      height: 20vh !important;
-      top:60vh  !important;
+    .container{
+      top: -65vh;
     }
+.education-card{
+  padding: 15px !important;
 }
+.explore-btn {
+  padding: 2px 20px;
+  font-size: 10px;
+    
+}
+
+.k-12-desc{
+  font-size: 13px;
+}
+
+
+    .k-12-man-image img{
+      height: 25vh !important;
+      top: -4vh;
+    }
+    .power-header h1{
+      font-size: 20px;;
+    }
+
+    .power-education img {
+        width: 38vw !important;
+        height: 17vh !important;
+      }
+
+
+     .power-education span {
+      padding: 5px !important;
+      margin-bottom: 0px !important
+     }
+
+     .inspire-heading, .inspire-paragraph, .client-paragraph{
+        width: 100% !important;
+     }
+}
+
+
+
+
 /* Mobile responsiveness */
 @media (max-width: 768px) {
    html, body{
     margin: 0;
-    overflow-x: hidden;
     max-width: 100%;  
-    max-height: 100%;
+     height: 100% !important;
+  overflow-x: hidden; 
   }
 
   .inspire-section{
     padding: 60px 50px;
   }
   .inspire-heading{
-    width: 70% !important;
-    font-size: 36px !important;
+    width: 70% ;
+    font-size: 36px ;
     margin: auto;
   }
   .inspire-paragraph{
-    width: 75% !important;
-    font-size: 16px !important;
+    width: 75% ;
+    font-size: 16px ;
     margin: auto;
   }
   .right-circle-2 {
@@ -1386,13 +1443,18 @@ body {
   }
   .large-circle-shape-1{
     height: 60vh  ;
+    
   }
   .content-card {
     width: 60vw;
     right: 10vw;
-    padding: 20px 10px;
+    padding: 21px 10px;
     top: -35vh
   }
+  .circle-section{
+    height: 35vh;
+  }
+
 
   .title {
     font-size: 1rem;
@@ -1427,7 +1489,7 @@ body {
     font-size: 2rem;
   }
   .circle-shape-2{
-    left: 0 !important;
+    left: 0 ;
   }
 
   .education-card {
@@ -1504,7 +1566,7 @@ body {
   }
 
   .k-12-man-image img{
-    height: 45vh !important;
+    height: 45vh ;
     max-width: fit-content !important;
     width: auto !important;
   }
@@ -1553,8 +1615,8 @@ body {
     gap: 10px;
   }
   .power-education img{
-    width: 30vw !important;
-    height: 28vh !important;
+    width: 35vw;
+    height: 20vh ;
     border-radius: 12px !important;
   }
   .power-education span{
@@ -1579,7 +1641,7 @@ body {
     margin: auto;
   }
   .client-paragraph{
-    width: 75% !important;
+    width: 75% ;
     font-size: 16px !important;
     margin: auto;
   }
@@ -1598,6 +1660,9 @@ body {
     padding: 20px 0px;
   }
 
+  .lab-section{
+    gap: 20px;
+  }
   .story-title{
     margin: 20px 0px;
 
