--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,13 @@
 }
 
 .header-li{
-  font-size: 12px;
+  font-size: 0.9vw;
+}
+
+
+.translate-scale:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out;
 }
 
 .power-education-head{
@@ -59,7 +65,7 @@ body {
   grid-template-columns: repeat(4, calc(30% - 85px));
   /* margin-left: 120px; */
   justify-content: center;
-  margin-top: -20vh;
+  margin-top: -25vh;
   text-align: center;
 }
 
@@ -158,8 +164,6 @@ body {
 
   .he-card-container {
     grid-template-columns: repeat(2, 1fr);
-    margin-left: 20px;
-    margin-right: 20px;
     margin-top: 0;
     gap: 15px;
   }
@@ -211,6 +215,11 @@ body {
 .partners-logos-image {
   height: 25vh;
   object-fit: contain;
+}
+
+.partners-logos-image:hover{
+   transform: scale(1.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 /*Section 5*/
@@ -311,29 +320,55 @@ body {
   margin: auto;
 }
 
-.LearningJourneybackground img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
 
-.LearningJourneyContent {
+
+/* .LearningJourneyContent {
   bottom: 200vh;
   position: relative;
   display: flex;
   justify-content: center;
   width: 100vw;
-}
+} */
+
+.LearningJourneyContent {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+  justify-content: center;
+    height: 100%;
+    z-index: 2;
+  bottom: 200vh;
+
+  }
+
+  .LearningJourneyContent img {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 95%;
+
+    display: block;
+    height: auto;
+    z-index: 1;
+  }
 
 .LearningText {
-  position: relative;
-  top: -30vh;
-  width: 90%;
-  color: white;
-  padding: 1rem;
-  font-weight: 800;
-  font-size: 50px;
-}
+    position: absolute;
+    top: 4%;
+    left: 49%;
+    font-weight: 900;
+    transform: translateX(-50%);
+    font-size: 50px !important;
+    text-align: left;
+    padding: 0.5rem;
+    z-index: 3;
+    width: 95%;
+    color: white;
+  }
+
+
 
 .overlay-text {
   position: absolute;
@@ -343,7 +378,12 @@ body {
   padding: 6px 12px;
   border-radius: 6px;
   pointer-events: auto;
+        margin-left: -15px;
+        width: 20vw;
+        z-index: 3; 
 }
+
+
 
 .overlay-text p {
   position: absolute;
@@ -351,46 +391,45 @@ body {
   font-size: 13px;
   font-weight: 500;
   line-height: 1.4em;
-  width: 250px;
+  width: 18vw;
   text-align: left;
   padding-top: 14px;
 }
 
 .step1 {
-  top: 18vh;
-  left: 11vw;
-}
+    top: 20%;
+    left: 8%;
+  }
 
-.step2 {
-  top: 50vh;
-  left: 11vw;
-  width: 13vw;
-}
-.step3 {
-  top: 112vh;
-  left: 17vw;
-  width: 10vw;
-}
-.step4 {
-  top: 66vh;
-  left: 35vw;
-  width: 12vw;
-}
+  .step2 {
+    top: 36%;
+    left: 8%;
+  }
 
-.step5 {
-  top: 5vh;
-  left: 45vw;
-  width: 12vw;
-}
-.step6 {
-  top: 53vh;
-  left: 59vw;
-  width: 8vw;
-}
-.step7 {
-  top: 107vh;
-  left: 73vw;
-}
+  .step3 {
+    top: 60%;
+    left: 14%;
+  }
+
+  .step4 {
+    top: 41%;
+    left: 33%;
+  }
+
+  .step5 {
+    top: 20%;
+    left: 52%;
+  }
+
+  .step6 {
+    top: 37%;
+    left: 58%;
+  }
+
+  .step7 {
+    top: 57%;
+    left: 72%;
+  }
 
 /*Section 7*/
 .inspire-section {
@@ -1245,10 +1284,10 @@ body {
     left: 50%;
     transform: translateX(-50%);
     font-size: 14px;
-    text-align: center;
+    text-align: left;
     padding: 0.5rem;
     z-index: 3;
-    width: 150px;
+    width: 100%;
   }
 
   .overlay-text {
@@ -1569,7 +1608,12 @@ body {
 
 .k-12-card-outer-div{
   box-shadow: 0 25px 24px rgba(0, 0, 0, 0.2);
+ 
+}
 
+.k-12-card-outer-div:hover{
+   transform: scale(1.02);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .education-card {
   width: 25vw;
@@ -2335,10 +2379,10 @@ body {
     left: 50%;
     transform: translateX(-50%);
     font-size: 14px;
-    text-align: center;
+    text-align: left;
     padding: 0.5rem;
     z-index: 3;
-    width: 150px;
+    width: 100%;
   }
 
   .overlay-text {
@@ -3269,6 +3313,7 @@ body {
     top: -3vh !important;
   }
 
+
   .right-circle {
     position: relative;
   }
@@ -3337,4 +3382,76 @@ body {
 .power-education-span{
   height: 130px;
   width: 21vw !important;
+}
+
+
+.power-education-image:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.power-education-span:hover{
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.power-education-head:hover{
+  transform: scale(1.01);
+  transition: transform 0.3s ease;
+}
+
+.counter-block p:hover{
+   transform: scale(1.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.grid-container img:hover{
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.clients-logo-7 img:hover{
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.lab-card img:hover{
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.story-card img:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.presence-map img:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.footer-grid p:hover, .footer-grid li:hover, .about-us p:hover, .about-us img:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+
+.lab-button:hover , .read-more-btn:hover {
+  transform: scale(1.05);
+  transition: background 0.3s ease, transform 0.3s ease;
+}
+
+.he-card:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.pr-16 img:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.k-12-man-image img:hover, .k-12-image-1:hover, .circle-section img:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
 }
