--- a/css/style.css
+++ b/css/style.css
@@ -1385,6 +1385,30 @@ body {
 .content-slider {
   position: relative;
 }
+.image-slider-wrapper {
+  width: 100%;
+  height: 70vh;
+  overflow: hidden;
+  position: relative;
+  z-index: -1000;
+}
+
+.image-slider-track {
+  display: flex;
+  width: calc(100vw * 3); /* 3 images */
+  transition: transform 0.5s ease-in-out;
+}
+
+.slider-image {
+  width: 100vw;
+  height: 70vh;
+  flex-shrink: 0;
+  object-fit: cover;
+  position: relative;
+  z-index: -1000;
+}
+
+
 
 .slides-wrapper {
   display: flex;
