--- a/css/style.css
+++ b/css/style.css
@@ -1363,8 +1363,9 @@ body {
 }
 
 .main-container {
-  position: relative;
+  position: absolute;
   width: 100%;
+  height: 100vh;
 }
 
 .content-card {
@@ -1374,7 +1375,9 @@ body {
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
   position: absolute;
   right: 9%;
-  top: -50vh;
+  
+top: -57%;
+
   display: flex;
   padding: 20px;
   flex-direction: column;
@@ -1536,7 +1539,7 @@ body {
   color: black;
   font-weight: bold;
   font-size: 14px;
-  padding: 4px 20px;
+  padding: 4px 10px;
   border: none;
   border-radius: 20px;
   cursor: pointer;
@@ -3324,12 +3327,13 @@ body {
   .footer-credits p {
     font-size: 8px !important;
   }
-
+  .main-container{
+    height: 0;
+  }
   .content-card {
     width: 80vw;
     gap: 0px !important;
     right: 0;
-    top: -40vh !important;
     padding: 30px 10px;
   }
   .controls {
